--- a/styles/scss/molecules/_home-kanal.scss
+++ b/styles/scss/molecules/_home-kanal.scss
@@ -440,7 +440,7 @@
                             ul {
                                 display: flex;
                                 list-style: none;
-                                gap: 0 16px;
+                                gap: 16px;
                                 li {
                                     a {
                                         display: block;
